--- a/nav.css
+++ b/nav.css
@@ -3,7 +3,7 @@
 }
 
 h1 {
-    font-size: 18px;
+    font-size: 1.125em;
 }
 
 .nav-container {
@@ -28,13 +28,13 @@ h1 {
 .nav-introduction-bullet {
     display: flex;
     flex-direction: column;
-    font-size: 12px;
+    font-size: 0.75em;
 }
 
 .nav-items {
     display: flex;
     gap: 24px;
-    font-size: 14;
+    font-size: 0.875em;
     font-weight: 600;
 }
 .nav-items a {
